# bangla-llm-evaluator

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
cookbook/: data_loader.ipynb  fluency_test.ipynb  hf_model.ipynb  package_test.ipynb
dataset/test_cases/: fluency_response.csv
llm_bangla_evaluator.egg-info/: PKG-INFO  SOURCES.txt
llm_evaluator/: __init__.py  config.py  dataset_loader.py  evaluator.py  guardrails.py  metrics.py  scoring.py  utils.py
llm_evaluator/data/: loader.py
llm_evaluator/data/csv/: conversation_fluency.csv  edge_case_handling.csv  guardrails_compliance.csv  language_proficiency.csv  special_instruction_adherence.csv  task_execution.csv  tool_calling.csv
llm_evaluator/metrics/: metrics.py
llm_evaluator/models/: bangla_nlp.py  llama_cpp.py  llm_api.py  translation.py
scripts/: run_evaluation.py
