[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_bangla_evaluator"
version = "0.1.0"
description = "Bangla LLM Evaluation Framework"
authors = [{ name="Your Name", email="you@example.com" }]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0"
]
